# raven_zero

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  QWEN.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/core/: logger.py  logging_middleware.py  rate_limiting.py  redis.py  security.py  security_headers.py  uptime.py
app/models/: schemas.py
app/routers/: download.py  health.py  preview.py  status.py  upload.py
app/services/: cache.py  diceware.py  scheduler.py
app/services/storage/: __init__.py  mime_detector.py  path_manager.py  repository.py  sanitizer.py  storage_service.py  validators.py
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-DATA-MODELS.md  03-SECURITY.md  04-API-SPEC.md  05-DEPLOYMENT.md  06-DEVELOPMENT.md  07-DECISIONS.md
